--- a/index.html
+++ b/index.html
@@ -52,53 +52,56 @@
       </div>
     </div>
     <div class="informacion flex-contenido">
-      <h4>kjhgfdddfghj</h4>
+      <h4>Sobre mí</h4>
       <hr>
-      <p>ljjhhg jbhjvyyu vyyjyfyffjyjfvuy uuyffy fyf  yfyyj j  jh hjvhjcffghj</p>
+      <p>Soy profesional en Ingeniería de Sistemas y Front-end developer
+        con gran capacidad de análisis que valora y respeta el tiempo de
+        los demás por ello la puntualidad es una actitud que respaldo en
+        mi ejercicio profesional y personal. </p>
       <h4>Herramientas aprendidas:</h4>
         <div class="skills">
-          <div class="icon-skill">
+          <div id="icon0" class="icon-skill">
             <img src="assets/img/html.png" alt="">
             <h4>Html</h4>
           </div>
-          <div class="icon-skill">
+          <div id="icon1"  class="icon-skill">
             <img src="assets/img/css.png" alt="">
             <h4>Css</h4>
           </div>
-          <div class="icon-skill">
+          <div id="icon2" class="icon-skill">
             <img src="assets/img/js.png" alt="">
             <h4>Javascript</h4>
           </div>
-          <div class="icon-skill">
+          <div id="icon3"  class="icon-skill">
             <img src="assets/img/git.png" alt="">
             <h4>Git</h4>
           </div>
-          <div class="icon-skill">
+          <div  id="icon4"  class="icon-skill">
             <img src="assets/img/bootstrap.png" alt="">
             <h4>Bootstrap</h4>
           </div>
-          <div class="icon-skill">
+          <div id="icon5" class="icon-skill">
             <img src="assets/img/api.png" alt="">
             <h4>API</h4>
           </div>
-          <div class="icon-skill">
+          <div  id="icon6" class="icon-skill">
             <img src="assets/img/jquery.png" alt="">
             <h4>Jquery</h4>
           </div>
-          <div class="icon-skill">
-            <img src="assets/img/gulp.png" alt="">
+          <div id="icon7" class="icon-skill">
+            <img  src="assets/img/gulp.png" alt="">
             <h4>Gulp</h4>
           </div>
-          <div class="icon-skill">
+          <div  id="icon8" class="icon-skill">
             <img src="assets/img/sass.png" alt="">
             <h4>Sass</h4>
           </div>
-          <div class="icon-skill">
-            <img src="assets/img/node-js.png" alt="">
+          <div id="icon9" class="icon-skill">
+            <img  src="assets/img/node-js.png" alt="">
             <h4>Node.js</h4>
           </div>
-          <div class="icon-skill">
-            <img src="assets/img/Materialize.png" alt="">
+          <div id="icon10" class="icon-skill">
+            <img  src="assets/img/Materialize.png" alt="">
             <h4>Materialize</h4>
           </div>
         </div>
@@ -115,7 +118,11 @@
             <img src="assets/img/imagen-proyecto.jpg" alt="">
           </div>
           <div class="descripcion ">
-              aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+            <div class="botones">
+              <button id="btn0" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+              <button id="btn1" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+            </div>
           </div>
         </div>
       </div>
@@ -130,7 +137,11 @@
             <img src="assets/img/imagen-proyecto.jpg" alt="">
           </div>
           <div class="descripcion column-media">
-              aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+            <div class="botones">
+              <button id="btn2" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+              <button id="btn3" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+            </div>
           </div>
         </div>
       </div>
@@ -145,7 +156,11 @@
           <img src="assets/img/imagen-proyecto.jpg" alt="">
         </div>
         <div class="descripcion column-media">
-            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+          aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+          <div class="botones">
+            <button id="btn4" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+            <button id="btn5" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+          </div>
         </div>
       </div>
     </div>
@@ -160,16 +175,20 @@
           <img src="assets/img/imagen-proyecto.jpg" alt="">
         </div>
         <div class="descripcion column-media">
-            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+          aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+          <div class="botones">
+            <button id="btn6" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+            <button id="btn7" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- <div class="informacion contactame"> -->
-      <div class="contactame flex">
+      <div id="contactame" class="contactame flex">
         <div class="info-contacto flex">
           <h4>CONTÁCTAME</h4>
-          <p class="centrar-texto">Si te gusto mi trabajo, mis habilidades o las tecnologias que uso,
+          <p class="centrar-texto">Si te gusto mi trabajo, mis habilidades o las tecnologías que uso,
             te dejo mi correo y teléfono para ponernos en contacto.</p>
             <p>Email: betsi.loayza@gmail.com</p>
             <p>Teléfono: 997669327</p>
@@ -181,7 +200,6 @@
           <span class="icon-instagram-with-circle"></span>
         </div>
       </div>
-    <!-- </div> -->
     <footer class="flex color-plomo padding">
       <p>Creado por Betsi Loayza</p>
     </footer>
