--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
       </div>
     </nav>
+    <!-- Presentación portada -->
     <div id="inicio" class="inicio">
       <div class="foto img-circle">
         <img src="assets/img/foto-yo.png" alt="">
@@ -51,14 +52,19 @@
         </div>
       </div>
     </div>
+    <!-- Informacion de herramientas aprendidas -->
     <div class="informacion flex-contenido">
-      <h4>Sobre mí</h4>
+      <h2>Sobre mí</h2>
       <hr>
-      <p>Soy profesional en Ingeniería de Sistemas y Front-end developer
-        con gran capacidad de análisis que valora y respeta el tiempo de
-        los demás por ello la puntualidad es una actitud que respaldo en
-        mi ejercicio profesional y personal. </p>
-      <h4>Herramientas aprendidas:</h4>
+      <div class="contenido-texto">
+        <p>Soy profesional en Ingeniería de Sistemas y Front-end developer
+          con gran capacidad de análisis que valora y respeta el tiempo de
+          los demás por ello la puntualidad es una actitud que respaldo en
+          mi ejercicio profesional y personal. </p>
+      </div>
+
+      <div class="contenido-skills">
+        <h4>Herramientas aprendidas:</h4>
         <div class="skills">
           <div id="icon0" class="icon-skill">
             <img src="assets/img/html.png" alt="">
@@ -69,40 +75,41 @@
             <h4>Css</h4>
           </div>
           <div id="icon2" class="icon-skill">
-            <img src="assets/img/js.png" alt="">
-            <h4>Javascript</h4>
+              <img src="assets/img/js.png" alt="">
+              <h4>Javascript</h4>
           </div>
           <div id="icon3"  class="icon-skill">
-            <img src="assets/img/git.png" alt="">
-            <h4>Git</h4>
+              <img src="assets/img/git.png" alt="">
+              <h4>Git</h4>
           </div>
           <div  id="icon4"  class="icon-skill">
-            <img src="assets/img/bootstrap.png" alt="">
-            <h4>Bootstrap</h4>
+              <img src="assets/img/bootstrap.png" alt="">
+              <h4>Bootstrap</h4>
           </div>
           <div id="icon5" class="icon-skill">
-            <img src="assets/img/api.png" alt="">
-            <h4>API</h4>
+              <img src="assets/img/api.png" alt="">
+              <h4>API</h4>
           </div>
           <div  id="icon6" class="icon-skill">
-            <img src="assets/img/jquery.png" alt="">
-            <h4>Jquery</h4>
+              <img src="assets/img/jquery.png" alt="">
+              <h4>Jquery</h4>
           </div>
           <div id="icon7" class="icon-skill">
-            <img  src="assets/img/gulp.png" alt="">
-            <h4>Gulp</h4>
+              <img  src="assets/img/gulp.png" alt="">
+              <h4>Gulp</h4>
           </div>
           <div  id="icon8" class="icon-skill">
-            <img src="assets/img/sass.png" alt="">
-            <h4>Sass</h4>
+              <img src="assets/img/sass.png" alt="">
+              <h4>Sass</h4>
           </div>
           <div id="icon9" class="icon-skill">
-            <img  src="assets/img/node-js.png" alt="">
-            <h4>Node.js</h4>
+              <img  src="assets/img/node-js.png" alt="">
+              <h4>Node.js</h4>
           </div>
           <div id="icon10" class="icon-skill">
-            <img  src="assets/img/Materialize.png" alt="">
-            <h4>Materialize</h4>
+              <img  src="assets/img/Materialize.png" alt="">
+              <h4>Materialize</h4>
+          </div>
           </div>
         </div>
       </div>
@@ -145,7 +152,7 @@
           </div>
         </div>
       </div>
-
+    <!-- Trabajos realizados -->
     <div class="trabajos">
       <div class="titulo ">
         <h3>titulo</h3>
@@ -183,8 +190,7 @@
         </div>
       </div>
     </div>
-
-    <!-- <div class="informacion contactame"> -->
+    <!-- Informacion de contacto-->
       <div id="contactame" class="contactame flex">
         <div class="info-contacto flex">
           <h4>CONTÁCTAME</h4>
