--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       <p>FRONT END DEVELOPER</p>
       <div class="iconos">
         <div class=" tamano-icon github">
-          <span class="icon-github-with-circle"></span>
+          <a href="https://github.com/betsiana" target="_blank"><span class="icon-github-with-circle"></span></a>
         </div>
         <div class="tamano-icon linkedin">
-          <span class="icon-linkedin-with-circle"></span>
+          <a href="https://www.linkedin.com/in/betsi-loayza/" target="_blank"><span class="icon-linkedin-with-circle"></span></a>
         </div>
       </div>
     </div>
@@ -57,10 +57,20 @@
       <h2>Sobre mí</h2>
       <hr>
       <div class="contenido-texto">
-        <p>Soy profesional en Ingeniería de Sistemas y Front-end developer
-          con gran capacidad de análisis que valora y respeta el tiempo de
-          los demás por ello la puntualidad es una actitud que respaldo en
-          mi ejercicio profesional y personal. </p>
+        <p>Soy Betsi, egresada como Front-End Developer, Ingeniera de Sistemas y Diseño Gráfico
+          Digital.
+          Me encanta los resultados que puedo obtener con la programación y los
+          beneficios que puedo otorgar a las personas que usan el producto que realice.
+          Además de codear, adoro viajar, conocer nuevos lugares y costumbres y
+          la comida es uno de los placeres "no negociables" de mi lista.
+        En los 6 meses intensivos que estuve en Laboratoria aprendi tecnologías
+        como: javascript, Html5, css3, Jquery, frameworks de diseño y herramientas
+         de productividad como: trabajo en equipo, compromiso, responsabilidad.
+       Para mi Laboratoria a significado un crecimiento personal por que he podido
+       compartir experiencias únicas con mis compañeras que me han permitido
+       desenvolverme mejor, ser mas comunicativa, trabajar en equipo, organizarme
+        para cumplir con las tareas del proyecto. Si desea conocer al detalle mis
+        conocimientos puede visitar la sección de herramientas aprendidas y/o descargar mi CV.</p>
       </div>
 
       <div class="contenido-skills">
@@ -114,21 +124,27 @@
         </div>
       </div>
 
-      <div id="trabajos" class="trabajos">
+    <div id="trabajos" class="trabajos">
         <div class="titulo ">
-          <h3>titulo</h3>
+          <h3>Laboratoria News</h3>
           <!--fadeInUp  -->
           <hr class="animated">
         </div>
         <div class="contenido ">
           <div class="imagen ">
-            <img src="assets/img/imagen-proyecto.jpg" alt="">
+            <img src="assets/img/labnews.png" alt="">
           </div>
           <div class="descripcion ">
-            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+            Laboratoria news aspira a ser la primera opción y referencia editorial para los peruanos.
+            Proyecto final sprint 6. El proyecto base incluye endpoints.
+            <p>Fuentes consultadas:</p>
+            <p>/api/news obtiene todas las noticias de la portada.</p>
+            <p>jQuery: url(http://api.jquery.com/)</p>
+            <p>Sass: url(http://sass-lang.com/documentation/Sass/Script/Functions.html)</p>
+            <p>Gulp.js: url(http://gulpjs.com/)</p>
             <div class="botones">
-              <button id="btn0" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
-              <button id="btn1" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+              <a href="https://newlaboratoria.herokuapp.com/" target="_blank"><button id="btn0" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+              <a href="https://github.com/betsiana/Laboratoria-news" target="_blank"><button id="btn1" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
             </div>
           </div>
         </div>
@@ -136,15 +152,23 @@
 
       <div class="trabajos">
         <div class="titulo ">
-          <h3>titulo</h3>
+          <h3>Yape</h3>
           <hr>
         </div>
         <div class="contenido ">
           <div class="imagen column-media">
-            <img src="assets/img/imagen-proyecto.jpg" alt="">
+            <img src="assets/img/yape.png" alt="">
           </div>
           <div class="descripcion column-media">
-            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+            Yape es la nueva aplicación del Banco de Crédito del Perú, con la que
+            tendrás la libertad de usar tu dinero como quieras, ya que pagar con
+             ella es más rápido, sin pretextos y fácil. Solo con Yape podrás
+             convertir tus planes en experiencias únicas, sin números de cuenta ni token.
+            <p>Este proyecto se realizo mediante hitos, esto para poder orginar nuestro avance al día.</p>
+            <p>Fuentes consultadas:</p>
+            <p>api/registerNumber, api/resendCode, api/createUser</p>
+            <p>jQuery: url(http://api.jquery.com/)</p>
+
             <div class="botones">
               <button id="btn2" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
               <button id="btn3" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
@@ -155,18 +179,23 @@
     <!-- Trabajos realizados -->
     <div class="trabajos">
       <div class="titulo ">
-        <h3>titulo</h3>
+        <h3>LabCar | Servicio de taxi</h3>
         <hr>
       </div>
       <div class="contenido ">
         <div class="imagen column-media">
-          <img src="assets/img/imagen-proyecto.jpg" alt="">
+          <img class="imagen-proyectos" src="assets/img/labcar.png" alt="">
         </div>
         <div class="descripcion column-media">
-          aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+          Se realizó un code review del: Proyecto final del Sprint4 del Bootcamp de Laboratoria
+          El proyecto se baso en hacer una página web que ofrece el servicio de taxi, dar la ubicación actual del usuario y le permite colocar de que punto a que punto se dirige, además da la tarifa.
+          En el proyecto se uso Bootstrap.
+          <p>Fuentes consultadas:</p>
+          <p>Bootstrap: url(http://getbootstrap.com/components/)</p>
+          <p>Google MapsAPI: url(https://developers.google.com/maps/?hl=es-419)</p>
           <div class="botones">
-            <button id="btn4" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
-            <button id="btn5" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
+            <a href="https://stephhiyagon.github.io/LabCar-CodeReview/" target="_blank"><button id="btn4" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
+            <a href="https://github.com/StephHiyagon/LabCar-CodeReview" target="_blank"><button id="btn5" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
           </div>
         </div>
       </div>
@@ -174,15 +203,20 @@
 
     <div class="trabajos">
       <div class="titulo center">
-        <h3>titulo</h3>
+        <h3>Pinterest</h3>
         <hr>
       </div>
       <div class="contenido ">
         <div class="imagen column-media">
-          <img src="assets/img/imagen-proyecto.jpg" alt="">
+          <img src="assets/img/pinterest.png" alt="">
         </div>
         <div class="descripcion column-media">
-          aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+          Proyecto grupal, que consiste en replicar el board web UI de Pinterest de Arabela.
+
+          <p>Fuentes consultadas:</p>
+          <p>jQuery: url(http://api.jquery.com/)</p>
+          <p>Sass: url(http://sass-lang.com/documentation/Sass/Script/Functions.html)</p>
+          <p>Gulp.js: url(http://gulpjs.com/)</p>
           <div class="botones">
             <button id="btn6" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
             <button id="btn7" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
@@ -194,16 +228,17 @@
       <div id="contactame" class="contactame flex">
         <div class="info-contacto flex">
           <h4>CONTÁCTAME</h4>
-          <p class="centrar-texto">Si te gusto mi trabajo, mis habilidades o las tecnologías que uso,
-            te dejo mi correo y teléfono para ponernos en contacto.</p>
+          <p class="centrar-texto">Si te gusto mi trabajo, mis habilidades
+            o las tecnologías que uso, te dejo mi correo y teléfono para
+            ponernos en contacto.</p>
             <p>Email: betsi.loayza@gmail.com</p>
             <p>Teléfono: 997669327</p>
         </div>
         <div class="iconos-contactame flex-horizontal">
-          <span class="icon-linkedin-with-circle"></span>
-          <span class="icon-github-with-circle"></span>
-          <span class="icon-pinterest-with-circle"></span>
-          <span class="icon-instagram-with-circle"></span>
+          <a href="https://www.linkedin.com/in/betsi-loayza/" target="_blank"><span class="icon-linkedin-with-circle"></span></a>
+          <a href="https://github.com/betsiana" target="_blank"><span class="icon-github-with-circle"></span></a>
+          <a href="https://es.pinterest.com/istebana/" target="_blank"><span class="icon-pinterest-with-circle"></span></a>
+          <a href="https://www.instagram.com/betsiloayza/" target="_blank"><span class="icon-instagram-with-circle"></span></a>
         </div>
       </div>
     <footer class="flex color-plomo padding">
