--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h2>Sobre mí</h2>
       <hr>
       <div class="contenido-texto">
-        <p>Soy Betsi, egresada como Front-End Developer, Ingeniera de Sistemas y Diseño Gráfico
+        <p>Soy Betsi, egresada como Front-End Developer, Ingeniera de Sistemas y Diseñadora Gráfica
           Digital.
           Me encanta los resultados que puedo obtener con la programación y los
           beneficios que puedo otorgar a las personas que usan el producto que realicé.
