--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class=" navbar-brand" href="#"><span id="nombre"></span></a>
+          <a class=" navbar-brand" href="#"><span id="nombre">BETSI LOAYZA</span></a>
         </div>
         <!-- Lista de la barra del menu -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,7 +65,7 @@
           la comida es uno de los placeres "no negociables" de mi lista.
         En los 6 meses intensivos que estuve en Laboratoria aprendi tecnologías
         como: javascript, Html5, css3, Jquery, frameworks de diseño y herramientas
-         de productividad como: trabajo en equipo, compromiso y responsabilidad.</p>
+         de productividad como: gulp y sass.</p>
       </div>
 
       <div class="contenido-skills">
