--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
       <h2>Sobre mí</h2>
       <hr>
       <div class="contenido-texto">
-        <p>Soy Betsi, egresada como Front-End Developer, Ingeniera de Sistemas y Diseñadora Gráfica
+        <p>Soy Betsi, egresada como Front-End Developer Junior de Laboratoria, Ingeniera de Sistemas y Diseñadora Gráfica
           Digital.
-          Me encanta los resultados que puedo obtener con la programación y los
-          beneficios que puedo otorgar a las personas que usan el producto que realicé.
+          Me encantan los resultados que puedo obtener con la programación y los
+          beneficios que puedo otorgar a las personas que usan los productos que realizo.
           Además de codear, adoro viajar, conocer nuevos lugares y costumbres y
           la comida es uno de los placeres "no negociables" de mi lista.
         En los 6 meses intensivos que estuve en Laboratoria aprendi tecnologías
-        como: javascript, Html5, css3, Jquery, frameworks de diseño y herramientas
-         de productividad como: gulp y sass.</p>
+        como: JavaScript, HTML5, CSS3, Jquery, frameworks de diseño y herramientas
+         de productividad como gulp y sass.</p>
       </div>
 
       <div class="contenido-skills">
@@ -132,11 +132,10 @@
             <img src="assets/img/labnews.png" alt="">
           </div>
           <div class="descripcion ">
-            <p>Proyecto final Sprint 6.</p>
             <p>La página Laboratoria News aspira a ser la primera opción y referencia
              editorial para los peruanos.</p>
-            <p>Para la creación de esta página se uso Html5, Sass, gulp, jquery
-              y un archivo json de donde obtendremos las noticias a mostrar y
+            <p>Para la creación de esta página se usó HTML5, Sass, Gulp, Jquery
+              y un archivo Json de donde obtendremos las noticias a mostrar y
               nombres de las fotos de la noticia.</p>
             <div class="botones">
               <a href="https://newlaboratoria.herokuapp.com/" target="_blank"><button id="btn0" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
@@ -156,11 +155,10 @@
             <img src="assets/img/yape.png" alt="">
           </div>
           <div class="descripcion column-media">
-            <p>Proyecto final Sprint 5.</p>
             <p>La app Yape del BCP te brinda la libertad de usar tu dinero como quieras,
               ya que pagar con ella es más rápido.</p>
-            <p>Para la creación de la replica de la app se uso Html5, jquery
-              y un json en donde se envio data y de esta manera se obtuvo codigos
+            <p>Para la creación de la réplica de la app se usó HTML5, Jquery
+              y un Json en donde se enviÓ data y de esta manera se obtuvo códigos
               de confirmación.</p>
 
             <div class="botones">
@@ -181,11 +179,10 @@
           <img class="imagen-proyectos" src="assets/img/labcar.png" alt="">
         </div>
         <div class="descripcion column-media">
-          <p>Code review de proyecto final Sprint 4.</p>
           <p>La página web LabCar ofrece el servicio de taxi, da la ubicación
-            actual del usuario y le permite ingresar punto de salida y llegada para trazar la ruta.</p>
-          <p>Para la creación de esta pagina se uso Html5, Css3, jquery
-            y el API de googlemaps donde obtendremos el autocompletado y trazo de ruta.</p>
+            actual del usuario y le permite ingresar un punto de salida y de llegada para trazar la ruta.</p>
+          <p>Para la creación de esta página se usó HTML5, CSS3, Jquery
+            y el API de GoogleMaps de donde obtendremos el autocompletado y trazo de ruta.</p>
           <div class="botones">
             <a href="https://stephhiyagon.github.io/LabCar-CodeReview/" target="_blank"><button id="btn4" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
             <a href="https://github.com/StephHiyagon/LabCar-CodeReview" target="_blank"><button id="btn5" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button></a>
@@ -204,11 +201,10 @@
           <img src="assets/img/pinterest.png" alt="">
         </div>
         <div class="descripcion column-media">
-          <p>Proyecto grupal sprint 6.</p>
           <p>La página de Pinterest es una plataforma para compartir imágenes que
             permite a los usuarios crear y administrar tableros personales.</p>
-          <p>Para la creación de esta replica se uso Html5, sass, jquery, gulp
-            y el API de Pinterest donde obtendremos las imagenes y datos necesarios.</p>
+          <p>Para la creación de esta réplica se uso HTML5, Sass, Jquery, Gulp
+            y el API de Pinterest donde obtendremos las imágenes y datos necesarios.</p>
           <div class="botones">
             <button id="btn6" class="btn btn1 btn-default" type="button">Ver demo <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
             <button id="btn7" class="btn btn2 btn-default" type="button">Ver código <span class="animated glyphicon glyphicon-circle-arrow-right"></span></button>
@@ -220,7 +216,7 @@
       <div id="contactame" class="contactame flex">
         <div class="info-contacto flex">
           <h4>CONTÁCTAME</h4>
-          <p class="centrar-texto">Si te gusto mi trabajo, mis habilidades
+          <p class="centrar-texto">Si te gustó mi trabajo, mis habilidades
             o las tecnologías que uso, dejo mi correo y teléfono para
             ponernos en contacto.</p>
             <p>Email: betsi.loayza@gmail.com</p>
