--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <p>La app Yape del BCP te brinda la libertad de usar tu dinero como quieras,
               ya que pagar con ella es más rápido.</p>
             <p>Para la creación de la réplica de la app se usó HTML5, Jquery
-              y un Json en donde se enviÓ data y de esta manera se obtuvo códigos
+              y un Json en donde se envió data y de esta manera se obtuvo códigos
               de confirmación.</p>
 
             <div class="botones">
