--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <div class="tamano-icon linkedin">
           <a href="https://www.linkedin.com/in/betsi-loayza/" target="_blank"><span class="icon-linkedin-with-circle"></span></a>
         </div>
+        <div class="tamano-icon cv">
+          <a href="cv%20.pdf" target="_blank"><img src="assets/icon/cv.png" alt="curriculum vitae"></a>
+        </div>
       </div>
     </div>
     <!-- Informacion de herramientas aprendidas -->
